tests/testdata/publish/invalid_fast_check.out
Checking fast check type graph for errors...
error[zap-missing-explicit-return-type]: missing explicit return type in the public API
 --> [WILDCARD]mod.ts:2:17
  | 
2 | export function getRandom() {
  |                 ^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/zap-missing-explicit-return-type

This package contains Zap errors. Although conforming to Zap will
significantly improve the type checking performance of your library,
you can choose to skip it by providing the --no-zap flag.

error: Found 1 problem
